Fixed Alignment issues due to Bootstrap upgrade.
- Fixed alignment issue for details view on Monitor Infra pages
- Fixed display:inline issues for System Info widget on Mon Infra dashboard

Partial-Bug: #1617989.

--- a/webroot/common/ui/css/contrail.components.css
+++ b/webroot/common/ui/css/contrail.components.css
@@ -27,10 +27,11 @@
     color:#3182bd;
 }
 .group-detail-container ul.item-list li .key.label-blue.indent-right{
-    padding-left:15px;
+    padding-left: 30px;
 }
 .group-detail-container ul.item-list li .value {
     color:#777;
+    margin: 0;
 }
 .block-grid-row {
     padding-top: 5px;
